# codeflow

./: .gitignore  CLAUDE.md  LICENSE  README.md  codeflow.md  loopflow.md  prompt.md  pyproject.toml
.claude/: settings.local.json
codeflow/: __main__.py  codeflow.py  file.py  token_profiler.py
codeflow/cli/: code_context.py  codeflow.py
codeflow/compose/: job.py  pipeline.py  prompt.py
codeflow/io/: file.py  git.py  session.py  token_profiler.py
codeflow/llm/: anthropic.py  llm.py  mate.py  openai.py
codeflow/templates/: __init__.py
codeflow/templates/jobs/: clarify.md  draft.md
codeflow/templates/mates/: maya.md  merlin.md
env/: loopflow_pip.txt
loopflow/: __init__.py  cli.py  file.py  prompt.py  session.py  team.py  workflow.py
loopflow/chat/: bot.py  discord.py  server.py
loopflow/cli/: code_context.py  loopflow.py
loopflow/compose/: file.py  job.py  pipeline.py  prompt.py  session.py  workflow.py
loopflow/io/: discord.py  file.py  git.py  session.py  token_profiler.py
loopflow/llm/: __init__.py  anthropic.py  llm.py  mate.py  openai.py  team.py
loopflow/templates/: __init__.py
loopflow/templates/jobs/: clarify.md  draft.md  review.md  synthesize.md
loopflow/templates/mates/: kaito.md  malcolm.md  maya.md  merlin.md
python/: api.py  rave.py
python/ddsp/: ddsp.py
swift/fantasia/fantasia/: FantasiaApp.swift  LoopflowApp.swift  RealmConfiguration.swift  RealmSession.swift  fantasiaApp.swift  log.swift
swift/fantasia/fantasiaTests/: fantasiaTests.swift
swift/fantasia/fantasiaUITests/: fantasiaUITests.swift  fantasiaUITestsLaunchTests.swift
swift/fantasia/loopflowTests/: loopflowTests.swift
swift/fantasia/loopflowUITests/: loopflowUITests.swift  loopflowUITestsLaunchTests.swift
swift/fantasia/testing/: RealmTesting.swift
tests/: conftest.py  mock.py  test_cli.py  test_file.py  test_llm.py  test_path_resolution.py  test_prompt.py  test_session.py  test_team.py  test_workflow.py
tests/compose/: test_pipeline.py  test_prompt.py
tests/io/: test_file.py  test_git.py  test_path_resolution.py  test_token_profiler.py
tests/llm/: conftest.py  test_anthropic.py  test_openai.py  test_team.py
(+95 files in other folders)
