[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codeflow"
version = "0.2.0"
description = "Tool for copying a codebase for use with LLM prompts"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0.0",
    "pyyaml>=6.0",
    "tiktoken",
]

[project.scripts]
codeflow = "codeflow.codeflow:cli"

[tool.hatch.build.targets.wheel]
packages = ["codeflow"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"

